--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Добро пожаловать в портфолио!</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Добро пожаловать в портфолио!</title>
-</head>
-
-<body id="app">
-  <script type="module" src="./src/js/app.js"></script>
-  <script type="module" src="./src/js/pages/index.js"></script>
-</body>
-
+  <body id="app">
+    <script type="module" src="./src/js/app.js"></script>
+    <script type="module" src="./src/js/pages/index.js"></script>
+  </body>
 </html>
