--- a/contacts.html
+++ b/contacts.html
@@ -1,80 +1,104 @@
 <!DOCTYPE html>
 <html lang="ru" style="display: none">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Связаться со мной</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Связаться со мной</title>
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="57x57" href="./favicon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="./favicon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="./favicon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="./favicon-76x76.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="./favicon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="./favicon-120x120.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="./favicon-144x144.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="./favicon-152x152.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon-180x180.png" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon-16x16.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="./favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="./favicon-192x192.png"
+    />
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="./favicon-144x144.png" />
+    <meta name="msapplication-config" content="./browserconfig.xml" />
+    <link rel="manifest" href="./manifest.json" />
+    <meta name="theme-color" content="#ffffff" />
+    <!-- favicon -->
 
-  <!-- favicon -->
-  <link rel="apple-touch-icon" sizes="57x57" href="./favicon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="./favicon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="./favicon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="./favicon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="./favicon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="./favicon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="./favicon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="./favicon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="./favicon-180x180.png">
-  <link rel="icon" type="image/svg+xml" href="./favicon.svg">
-  <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="./favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="./favicon-192x192.png">
-  <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
-  <link rel="icon" type="image/x-icon" href="./favicon.ico">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="./favicon-144x144.png">
-  <meta name="msapplication-config" content="./browserconfig.xml">
-  <link rel="manifest" href="./manifest.json">
-  <meta name="theme-color" content="#ffffff">
-  <!-- favicon -->
-</head>
+    <meta name="yandex-verification" content="8dfd8d0d98a96d54" />
+  </head>
 
-<body id="app">
-  <script type="module" src="./src/js/app.js"></script>
-  <script type="module" src="./src/js/pages/contacts.js"></script>
-  <!-- Yandex.Metrika counter -->
-  <script type="text/javascript">
-    (function (m, e, t, r, i, k, a) {
-      m[i] =
-        m[i] ||
-        function () {
-          (m[i].a = m[i].a || []).push(arguments);
-        };
-      m[i].l = 1 * new Date();
-      for (var j = 0; j < document.scripts.length; j++) {
-        if (document.scripts[j].src === r) {
-          return;
+  <body id="app">
+    <script type="module" src="./src/js/app.js"></script>
+    <script type="module" src="./src/js/pages/contacts.js"></script>
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+      (function (m, e, t, r, i, k, a) {
+        m[i] =
+          m[i] ||
+          function () {
+            (m[i].a = m[i].a || []).push(arguments);
+          };
+        m[i].l = 1 * new Date();
+        for (var j = 0; j < document.scripts.length; j++) {
+          if (document.scripts[j].src === r) {
+            return;
+          }
         }
-      }
-      (k = e.createElement(t)),
-        (a = e.getElementsByTagName(t)[0]),
-        (k.async = 1),
-        (k.src = r),
-        a.parentNode.insertBefore(k, a);
-    })(
-      window,
-      document,
-      "script",
-      "https://mc.yandex.ru/metrika/tag.js",
-      "ym"
-    );
+        (k = e.createElement(t)),
+          (a = e.getElementsByTagName(t)[0]),
+          (k.async = 1),
+          (k.src = r),
+          a.parentNode.insertBefore(k, a);
+      })(
+        window,
+        document,
+        "script",
+        "https://mc.yandex.ru/metrika/tag.js",
+        "ym"
+      );
 
-    ym(98457612, "init", {
-      clickmap: true,
-      trackLinks: true,
-      accurateTrackBounce: true,
-      webvisor: true,
-    });
-  </script>
-  <noscript>
-    <div>
-      <img src="https://mc.yandex.ru/watch/98457612" style="position: absolute; left: -9999px" alt="" />
-    </div>
-  </noscript>
-  <!-- /Yandex.Metrika counter -->
-</body>
-
+      ym(98457612, "init", {
+        clickmap: true,
+        trackLinks: true,
+        accurateTrackBounce: true,
+        webvisor: true,
+      });
+    </script>
+    <noscript>
+      <div>
+        <img
+          src="https://mc.yandex.ru/watch/98457612"
+          style="position: absolute; left: -9999px"
+          alt=""
+        />
+      </div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
+  </body>
 </html>
